# OmniFrame---tkA

./: .audit-allowlist.json  .dockerignore  .env.example  .env.test  .gitignore  .lint-baseline.json  .lint_review.txt  .mcp.json  .railwayignore  Dockerfile  LICENSE  README.md  capacitor.config.ts  eslint.config.js  index.html  knip.config.ts  lint-staged.config.mjs  netlify.toml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pytest.ini  railway.json  railway.toml  skills-lock.json  start.py  vite.config.ts  vitest.config.ts  vitest.integration.config.ts
omni_agent_v2/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
omni_agent_v2/.cargo/: config.toml
omni_agent_v2/.github/workflows/: build.yml
omni_agent_v2/crates/agent-bin/: Cargo.toml
omni_agent_v2/crates/agent-bin/src/: main.rs
omni_agent_v2/crates/agent-core/: Cargo.toml
omni_agent_v2/crates/agent-core/src/: config.rs  jwt.rs  lib.rs  metrics.rs  middleware.rs  reversal.rs  router.rs  session_pool.rs  state.rs  tasks.rs  token_provider.rs  work_service.rs
omni_agent_v2/crates/agent-gui/: Cargo.toml  build.rs  tauri.conf.json
omni_agent_v2/crates/agent-gui/capabilities/: default.json
omni_agent_v2/crates/agent-gui/icons/: README.md
omni_agent_v2/crates/agent-gui/src/: commands.rs  in_process.rs  lib.rs  main.rs  snapshot.rs
omni_agent_v2/crates/agent-rpc/: Cargo.toml
omni_agent_v2/crates/agent-rpc/src/: helper.rs  lib.rs  supervisor.rs  types.rs
omni_agent_v2/crates/agent-rpc/tests/: mock_helper.py  round_trip.rs
omni_agent_v2/crates/agent-types/: Cargo.toml
omni_agent_v2/crates/agent-types/src/: constants.rs  health.rs  jobs.rs  lib.rs  recording.rs  rpc.rs  sap.rs  session.rs  supabase.rs  ws.rs
omni_agent_v2/crates/agent-ws/: Cargo.toml
omni_agent_v2/crates/agent-ws/src/: lib.rs  metrics.rs  runner.rs  token.rs
omni_agent_v2/gui/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
omni_agent_v2/gui/src/: App.tsx  env.d.ts  index.css  main.tsx
omni_agent_v2/packaging/: ARCHITECTURE.md  bootstrap-and-build.ps1  build.ps1  build_macos_validate.sh  check_rpc_contract.py
omni_agent_v2/packaging/_bootstrap/: _repro-npm.ps1  fix-system-path.ps1  install-llvm.ps1  install-vs-buildtools.ps1  run-build-msvc.cmd
omni_agent_v2/packaging/installer/: installer.iss
omni_agent_v2/python/: com_compat.py  requirements.txt  rpc_protocol.py  sap_helper.py  session_manager.py
omni_agent_v2/python/handlers/: __init__.py  _common.py  connection.py  ls01n.py  ls02n.py  lt01.py  lt12.py  lt22.py  lx25.py  mm02.py  mm03.py  query.py  recording.py  reversal.py  shipment.py  zmm60.py
omni_agent_v2/python/tests/: conftest.py  test_helper_dispatch.py  test_rpc_protocol.py  test_session_manager.py
rust-ai-service/: .env.example  Cargo.toml  Dockerfile  railway.toml
rust-ai-service/src/: auth.rs  main.rs  middleware.rs
rust-ai-service/src/ai/: fallback.rs  huggingface.rs  mod.rs  novita.rs  prompts.rs
rust-ai-service/src/api/: handlers.rs  mod.rs
rust-ai-service/src/models/: mod.rs
rust-ai-service/src/storage/: mod.rs
rust-core-service/: Cargo.toml  Dockerfile  README.md  build.rs  railway.toml  start_dev.ps1
rust-core-service/src/: lib.rs  main.rs
rust-core-service/src/api/: error.rs  mod.rs  smartsheet_client.rs
rust-core-service/src/auth/: api_keys.rs  claims.rs  jwks.rs  jwt.rs  mod.rs  rbac.rs
rust-core-service/src/cache/: mod.rs  query_cache.rs  redis_pool.rs  session.rs
rust-core-service/src/config/: auth.rs  database.rs  mod.rs  redis.rs
rust-core-service/src/db/: health.rs  mod.rs  pool.rs
rust-core-service/src/grpc/: mod.rs  service.rs
rust-core-service/src/metrics/: mod.rs  prometheus.rs
rust-dashboard-service/: .env.example  Cargo.toml  Dockerfile  railway.toml
rust-dashboard-service/src/: auth.rs  main.rs  middleware.rs  omnibelt.rs
rust-mdm-service/: .env.example  Cargo.toml  Dockerfile  railway.toml
rust-mdm-service/src/: auth.rs  config.rs  main.rs  middleware.rs  state.rs
rust-mdm-service/src/api/: mod.rs
rust-mdm-service/src/metrics/: mod.rs
rust-streaming-service/: .env.example  Cargo.toml  Dockerfile  railway.toml  run-local.bat
rust-streaming-service/src/: lib.rs  main.rs
rust-streaming-service/src/api/: error.rs  mod.rs
rust-streaming-service/src/cache/: mod.rs
rust-streaming-service/src/config/: mod.rs
rust-streaming-service/src/exacq/: client.rs  mod.rs  models.rs  session.rs
rust-work-service/: .env.example  Cargo.toml  Dockerfile  railway.toml
rust-work-service/src/: agent_jwt.rs  auth.rs  cycle_count_listener.rs  lib.rs  lx03_listener.rs  main.rs  middleware.rs  notifications_listener.rs  omnibelt_listener.rs  pglistener.rs  rf_putaway_listener.rs  sap_agents_listener.rs  sap_import_runs_listener.rs  sap_jobs_listener.rs  ws_token.rs
rust-work-service/src/api/: error.rs  mod.rs
rust-work-service/src/config/: mod.rs
rust-work-service/src/db/: mod.rs  models.rs  pool_setup.rs  queries.rs
rust-work-service/src/entity_focus/: evictor.rs  mod.rs  redis.rs
rust-work-service/src/observability/: http_metrics.rs  metrics.rs  middleware.rs  mod.rs
rust-work-service/src/presence/: evictor.rs  mod.rs  redis.rs
rust-work-service/src/scheduler/: mod.rs
rust-work-service/src/settings/: cache.rs  listener.rs  mod.rs
rust-work-service/src/strategies/: cycle_count.rs  mod.rs  pick.rs  zone_audit.rs
rust-work-service/src/triggers/: config.rs  dsl.rs  evaluator.rs  loader.rs  mod.rs
rust-work-service/src/websocket/: mod.rs
rust-work-service/tests/: abandonment_release.rs  capacity_clamp.rs  critical_priority.rs  dispatcher_phase1.rs  dispatcher_phase2.rs  dispatcher_phase3.rs  idempotency.rs  push_batch_savepoints.rs  reservation_escalation.rs  route_compatibility.rs  settings_cache_hit.rs  settings_listener_invalidation.rs  supervisor_protection.rs  ws_auth_binding.rs  ws_filtering.rs  ws_tenant_isolation.rs  zone_assignment_dedicated.rs  zone_exclusivity_active.rs  zone_exclusivity_reserved.rs
rust-work-service/tests/common/: mod.rs
(+2839 files in other folders)
