[workspace]
resolver = "2"
members = [
    "crates/agent-types",
    "crates/agent-rpc",
    "crates/agent-ws",
    "crates/agent-core",
    "crates/agent-bin",
    "crates/agent-gui",
]

[workspace.package]
version = "2.0.0-alpha"
edition = "2021"
license = "MIT"
authors = ["OmniFrame <eng@omniframe>"]
repository = "https://github.com/onebox-ai-logistics/omniframe"

# Pinned dependency versions — Worker C (Tauri) and Worker D (mirror) MUST
# match these exactly. The choices are deliberate:
#   - tokio 1: stable async runtime, broad ecosystem support.
#   - axum 0.7: matches what rust-work-service already ships, so the team
#     reuses the same axum extractor patterns.
#   - reqwest 0.12 with rustls-tls-native-roots: avoids the Windows MSVC
#     libcurl/openssl link-time pain and reads the OS trust store so a
#     corporate proxy MITM cert is trusted out-of-the-box.
#   - tokio-tungstenite 0.21: paired with the tungstenite 0.21 line that
#     ships with axum 0.7's `axum::extract::ws` module (keeps frame types
#     interoperable if we ever route both client+server through one crate).
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "set-header"] }
hyper = { version = "1", features = ["full"] }
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "stream"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-native-roots", "connect"] }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures-util = "0.3"
futures = "0.3"
parking_lot = "0.12"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
dashmap = "5"
async-trait = "0.1"
bytes = "1"
once_cell = "1"
prometheus = { version = "0.13", default-features = false }
# Tauri 2 — GUI runtime. Used by agent-gui only.
tauri = { version = "2", features = [] }
tauri-build = { version = "2" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
