[package]
name = "drone-ai-service"
version = "0.1.0"
edition = "2021"
description = "AI-powered drone scan analysis service for OmniFrame warehouse scanning"
authors = ["Jai Singh"]

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for AI APIs
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Image processing
base64 = "0.21"
image = "0.24"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "chrono", "json"] }

# Supabase Storage - use reqwest directly instead of AWS SDK
# (AWS SDK requires very recent Rust versions)

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

# Environment variables
dotenvy = "0.15"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# DateTime
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
