[package]
name = "rust-core-service"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
description = "High-performance Rust core service for OneBox AI - database queries, caching, and JWT validation"
authors = ["OneBox AI Team"]

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "limit"] }
hyper = { version = "1.0", features = ["full"] }

# Async Runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
futures = "0.3"

# Database
# Pinned to =0.8.6 for RUSTSEC-2024-0363 (Postgres protocol PoC) and future
# Supavisor transaction-mode pooling support (PR #3863 unnamed prepared
# statements when `.persistent(false)`). See:
# memorybank/OmniFrame/Implementations/Upgrade-Sqlx-08-Core-Service.md
# `migrate` and `bigdecimal` features dropped (verified unused in src/).
sqlx = { version = "=0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json"
] }

# Redis - use bb8-redis which re-exports redis crate
bb8 = "0.8"
bb8-redis = "0.16"

# JWT & Crypto
jsonwebtoken = "9.2"
ring = "0.17"
base64 = "0.21"
md-5 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# gRPC
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
dotenvy = "0.15"
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5.5"
lru = "0.12"

# HTTP Client (for JWKS fetching)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Rate Limiting
governor = "0.6"

# Regex (lightweight)
regex-lite = "0.1"

# PyO3 for Python bindings (optional)
pyo3 = { version = "0.20", features = ["auto-initialize", "extension-module"], optional = true }

[build-dependencies]
tonic-build = "0.10"

[features]
default = []
python = ["pyo3"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[dev-dependencies]
tokio-test = "0.4"

# Benchmarks can be added later
# criterion = { version = "0.5", features = ["async_tokio"] }
# [[bench]]
# name = "query_benchmarks"
# harness = false
