[package]
name = "drone-dashboard-service"
version = "0.1.0"
edition = "2021"
description = "Background aggregation service for drone scan dashboard statistics"
authors = ["OneBox AI Team"]

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "=0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "chrono", "json"] }

# Redis connection pooling — matches the bb8 + bb8-redis pair used by
# rust-work-service. Used by the `/omnibelt/bootstrap` cache (30s TTL,
# key `omnibelt:bootstrap:{org_id}:{user_id}`). Optional at runtime —
# when REDIS_URL is unset or unreachable, caching is disabled and the
# endpoint falls through to the read-replica pool unconditionally.
bb8 = "0.8"
bb8-redis = "0.16"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Scheduling
tokio-cron-scheduler = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Environment variables
dotenvy = "0.15"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for auth service calls
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
