[package]
name = "rust-mdm-service"
version = "0.1.0"
edition = "2021"
description = "Mobile Device Management Service for OneBox AI - Apple MDM protocol, telemetry ingestion, command queue, and admin APIs"
authors = ["OneBox AI Team"]

[dependencies]
# Web framework with WebSocket support
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Database (direct Postgres via DATABASE_URL)
sqlx = { version = "=0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "chrono", "json"] }

# Redis connection pooling
bb8 = "0.8"
bb8-redis = "0.16"

# HTTP client (APNs, rust-core-service auth validation)
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics (Prometheus)
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Apple MDM plist parsing and generation
plist = "1.6"

# WebSocket
tokio-tungstenite = "0.24"

# Async utilities
futures-util = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Environment variables
dotenvy = "0.15"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# Streaming
bytes = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
