[package]
name = "rust-streaming-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "High-performance ExacqVision camera streaming proxy for OneBox AI"
authors = ["OneBox AI Team"]

[dependencies]
# Web Framework with WebSocket supports
axum = { version = "0.7", features = ["macros", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "limit"] }
hyper = { version = "1.0", features = ["full"] }

# Async Runtimes
tokio = { version = "1.35", features = ["full", "sync"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"
futures-util = "0.3"

# HTTP Client with streaming support
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream", "cookies"] }

# Redis
bb8 = "0.8"
bb8-redis = "0.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# Pin time to version that doesn't require edition 2024
time = ">=0.3.20, <0.3.37"
thiserror = "1.0"
anyhow = "1.0"
dotenvy = "0.15"
once_cell = "1.19"
parking_lot = "0.12"

# Streaming
bytes = "1.5"
async-stream = "0.3"
pin-project-lite = "0.2"

# URL handling
url = "2.5"

# Base64 encoding
base64 = "0.21"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[dev-dependencies]
tokio-test = "0.4"
